--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "license": "",
   "dependencies": {
+    "@prisma/client": "^3.10.0",
     "@remix-run/react": "^1.2.1",
     "@remix-run/serve": "^1.2.1",
     "clsx": "^1.1.1",
@@ -20,9 +21,19 @@
     "@types/js-cookie": "^3.0.1",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
+    "@typescript-eslint/eslint-plugin": "^5.13.0",
+    "@typescript-eslint/parser": "^5.13.0",
     "axios": "^0.26.0",
     "cheerio": "^1.0.0-rc.10",
     "concurrently": "^7.0.0",
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^16.1.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "prisma": "^3.10.0",
     "tailwindcss": "^3.0.23",
     "typescript": "^4.1.2",
     "xlsx": "^0.18.2"
