--- a/.eslintrc
+++ b/.eslintrc
@@ -15,6 +15,7 @@
         "react/react-in-jsx-scope": "off",
         "@typescript-eslint/no-use-before-define": "off",
         "import/prefer-default-export": "off",
+        "no-underscore-dangle": "off",
         "import/extensions": [
             "off",
             "ignorePackages",
