--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,7 @@
         "@typescript-eslint/no-use-before-define": "off",
         "import/prefer-default-export": "off",
         "no-underscore-dangle": "off",
+        "@typescript-eslint/no-throw-literal": "off",
         "import/extensions": [
             "off",
             "ignorePackages",
