--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "dev": "concurrently \"npm run dev:css\" \"remix dev\"",
     "dev:css": "tailwindcss -o ./app/tailwind.css --watch",
     "deploy": "fly deploy --remote-only",
-    "start": "cross-env NODE_ENV=production remix-serve build"
+    "start": "cross-env NODE_ENV=production remix-serve build",
+    "build:database": "tsc /app/data/downloadDatabase.ts && node /app/data/downloadDatabase.js"
   }
 }
