Fixed selectedAnswer not being reset. Fixed exam timer not pausing when media is playing.

--- a/.eslintrc
+++ b/.eslintrc
@@ -9,7 +9,8 @@
     },
     "extends": [
         "airbnb",
-        "airbnb-typescript"
+        "airbnb-typescript",
+        "plugin:react-hooks/recommended"
     ],
     "rules": {
         "react/react-in-jsx-scope": "off",
