--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@prisma/client": "^3.10.0",
     "@remix-run/react": "^1.2.1",
     "@remix-run/serve": "^1.2.1",
+    "axios": "^0.26.0",
+    "cheerio": "^1.0.0-rc.10",
     "clsx": "^1.1.1",
     "cross-env": "^7.0.3",
     "js-cookie": "^3.0.1",
@@ -14,7 +16,8 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "remix": "^1.2.1",
-    "remix-utils": "^2.5.0"
+    "remix-utils": "^2.5.0",
+    "xlsx": "^0.18.2"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.2.1",
@@ -23,8 +26,6 @@
     "@types/react-dom": "^17.0.9",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
-    "axios": "^0.26.0",
-    "cheerio": "^1.0.0-rc.10",
     "concurrently": "^7.0.0",
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -35,8 +36,7 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "prisma": "^3.10.0",
     "tailwindcss": "^3.0.23",
-    "typescript": "^4.1.2",
-    "xlsx": "^0.18.2"
+    "typescript": "^4.1.2"
   },
   "engines": {
     "node": ">=14"
