Rewrote entire question related code. It's now using JSON file instead of Prisma SQLite. This allows the project to be separated into frontend rendering server (Remix on fly.io) and firebase (for managing users).

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["remix.env.d.ts", "**/*.ts", "**/*.tsx", "app"],
+  "include": ["remix.env.d.ts", "**/*.ts", "**/*.tsx", "app", "scripts"],
   "compilerOptions": {
     "lib": ["DOM", "DOM.Iterable", "ES2019"],
     "isolatedModules": true,
@@ -17,5 +17,8 @@
 
     // Remix takes care of building everything in `remix build`.
     "noEmit": true
+  },
+  "ts-node": {
+    "files": true
   }
 }
