--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "license": "",
   "dependencies": {
-    "@prisma/client": "^3.10.0",
     "@remix-run/react": "^1.2.1",
     "@remix-run/serve": "^1.2.1",
     "axios": "^0.26.0",
@@ -12,6 +11,7 @@
     "clsx": "^1.1.1",
     "cross-env": "^7.0.3",
     "js-cookie": "^3.0.1",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@remix-run/dev": "^1.2.1",
     "@types/js-cookie": "^3.0.1",
+    "@types/lodash": "^4.14.182",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
@@ -34,7 +35,6 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "prisma": "^3.10.0",
     "tailwindcss": "^3.0.23",
     "typescript": "^4.1.2"
   },
@@ -50,6 +50,8 @@
     "dev:css": "tailwindcss -o ./app/tailwind.css --watch",
     "deploy": "fly deploy --remote-only",
     "start": "cross-env NODE_ENV=production remix-serve build",
-    "build:database": "tsc /app/data/downloadDatabase.ts && node /app/data/downloadDatabase.js"
+    "build:database": "npx ts-node /app/scripts/downloadDatabase.ts",
+    "build:database:dev": "npx ts-node scripts/downloadDatabase.ts",
+    "checkPerformance": "npx ts-node scripts/checkPerformance.ts"
   }
 }
